# bevy_panorbit_camera_ext

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TEST_STATE.md  ZOOM_FIX_PROCEDURE.md  detect_oscillation.py
.github/workflows/: ci.yml
examples/: demo.rs  extras.rs  zoom_to_mesh.rs
src/: animation.rs  components.rs  events.rs  extension.rs  fit.rs  lib.rs  observers.rs  prelude.rs  smoothness.rs  support.rs  visualization.rs  zoom.rs
src/visualization/: convex_hull.rs  edge_layout.rs  geometry.rs  labels.rs  mod.rs  screen_space.rs  system.rs  systems.rs  types.rs
tests/: observer_lifecycle.rs
