[package]
name = "bevy_panorbit_camera_ext"
version = "0.1.0"
edition = "2024"

[features]
default = []
visualization = []

[dependencies]
bevy = "0.18.0"
bevy_panorbit_camera = "0.34.0"

[[example]]
name = "extras"

[dev-dependencies]
bevy_panorbit_camera_ext = { path = ".", features = ["visualization"] }
bevy_brp_extras = "0.18.6"
