[package]
name = "bevy_panorbit_camera_ext"
version = "0.1.0"
edition = "2024"

[features]
default = []
visualization = ["bevy/bevy_gizmos", "bevy/bevy_text", "bevy/bevy_ui"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
  "bevy_asset",
  "bevy_camera",
  "bevy_log",
  "bevy_mesh",
  "bevy_window",
] }
bevy_panorbit_camera = "0.34.0"

[[example]]
name = "extras"

[dev-dependencies]
bevy_panorbit_camera_ext = { path = ".", features = ["visualization"] }
bevy_brp_extras = "0.18.7"
bevy_window_manager = "0.18.3"
